[package]
name = "clasher"
version = "0.8.0"
edition = "2021"

authors = ["Christian Christovich"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["cargo"] }
md-5 = "0.10.6"
ntlm-hash = "0.1.0"
sha2 = "0.10.8"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
